@@ -1,8 +1,12 @@
 avahi (0.6.31-5) UNRELEASED; urgency=medium
 
-  * Recommend iproute2 instead of transitional package iproute
+  [ Andreas Henriksson ]
+  * Recommend iproute2 instead of transitional package iproute.
+  * Update avahi-daemon support scripts to use iproute2 tools if available
+    with a fallback to net-tools and graceful degradation if neither is
+    installed. (Closes: #762326)
 
- -- Andreas Henriksson <andreas@fatal.se>  Thu, 13 Mar 2014 20:29:14 +0100
+ -- Michael Biebl <biebl@debian.org>  Mon, 13 Apr 2015 20:59:05 +0200
 
 avahi (0.6.31-4) unstable; urgency=medium
 
